fixing headers for readability

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -913,6 +913,12 @@ a.noLink {
 
 /* ============= HER0 =============== */
 .h1-text {
+  font-size: clamp(45px, 5vw + 10px, 65px);
+  line-height: 1.3;
+  font-weight: 700;
+}
+
+.h2-text {
     font-size: clamp(45px, 5vw + 10px, 65px);
     line-height: 1.3;
     font-weight: 700;
@@ -1842,14 +1848,14 @@ ul {
                                   
 
 /* =========== FAQ ========== */
-.h1-faq {
+.h2-faq {
     font-size: 3rem;
     font-weight: 700;
 }
 
 
 @media screen and (min-width: 992px) {
-    .faq_intro h1 {
+    .faq_intro h2 {
         width: 300px;
     }
 
